method save fixed, more test scenario added